# teste_agno

./: .env  0.llm_call.py  1.1.researcher.py  1.2.Analista.py  1_3_own_tools.py  Agno_pdf_agent.py  pyproject.toml
tmp/: agent.db
